# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  db.py  main.py  urls.py
page_analyzer/templates/: base.html  footer.html  index.html  layout.html  messages.html  navbar.html
page_analyzer/templates/components/: form.html  navbar.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: index.html  url.html
