[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet page-analyzer project"
authors = ["Maruf Karaev <maruf.karaev97@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
